--- a/README
+++ b/README
@@ -56,7 +56,7 @@ KCachegrind features
 Most important: TreeMap calltree visualisation.
 For the rest, see the detailed "What's this?" help for
 each part of KCachegrind and the quick starter on the
-WWW page ( http://kcachegrind.sf.net/ )
+WWW page ( http://kcachegrind.sourceforge.net/cgi-bin/show.cgi )
 
 
 
