give translators credit
svn path=/trunk/kdesdk/doc/kcachegrind/; revision=321184

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -25,6 +25,9 @@
 <address><email>Josef.Weidendorfer@gmx.de</email></address>
 </affiliation>
 </author>
+
+<!-- TRANS:ROLES_OF_TRANSLATORS -->
+
 </authorgroup>
 
 <copyright>
